src/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techveo
  labels:
    name: techveo
    app.kubernetes.io/name: techveo
    app.kubernetes.io/part-of: techveo-system
