src/base/techveo-management-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techveo-management-worker
  namespace: techveo
  labels:
    app.kubernetes.io/name: techveo-management-worker
    app.kubernetes.io/component: worker
    app.kubernetes.io/part-of: techveo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: techveo-management-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: techveo-management-worker
        app.kubernetes.io/component: worker
        app.kubernetes.io/part-of: techveo-system
    spec:
      containers:
        - name: techveo-management-worker
          image: grupotechchallenge/techveo-management-worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"
